--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://rfdonnelly.github.io/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Rob Donnelly"
+theme = "temple"
