--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/temple"]
 	path = themes/temple
 	url = https://github.com/aos/temple.git
+[submodule "public"]
+	path = public
+	url = git@github.com:rfdonnelly/rfdonnelly.github.io.git
