--- a/config.toml
+++ b/config.toml
@@ -5,3 +5,10 @@ theme = "temple"
 pygmentsCodefences = true
 pygmentsUseClasses = true
 
+[params]
+dataformatpretty = "2006-01-02"
+
+[author]
+name = "Rob Donnelly"
+github = "rfdonnelly"
+gaid = "UA-145317325-1"
