feat: add support for toc

--- a/config.toml
+++ b/config.toml
@@ -16,3 +16,5 @@ pygmentsUseClasses = true
 [markup]
   [markup.asciidocExt]
     extensions = ["asciidoctor-kroki"]
+    preserveTOC = true
+    sectionNumbers = true
