--- a/config.toml
+++ b/config.toml
@@ -18,3 +18,16 @@ pygmentsUseClasses = true
     extensions = ["asciidoctor-kroki"]
     preserveTOC = true
     sectionNumbers = true
+
+[security]
+  enableInlineShortcodes = false
+  [security.exec]
+    allow = ['^dart-sass-embedded$', '^go$', '^npx$', '^postcss$', '^asciidoctor$']
+    osEnv = ['(?i)^(PATH|PATHEXT|APPDATA|TMP|TEMP|TERM)$']
+
+  [security.funcs]
+    getenv = ['^HUGO_']
+
+  [security.http]
+    methods = ['(?i)GET|POST']
+    urls = ['.*']
