feat: enable syntax highlighting for Asciidoc
Currently embedding inline styles.  Not ideal but couldn't figure out
how to link.  The asciidoctor linkcss attribute [1] can be used to do
this but the <link> may be in the <head> generated/stripped by
asciidoctor.

I also tried the Rouge highlighter but couldn't get it to work.
Probably because of a stylesheet issue.  I don't think there is a way to
embedded Rouge styles like you can with Pygments.

I tried using a different theme other than default/friendly but anything
with a non-gray background had rendering issues where the test
background would be gray but the rest of the div background would be the
right theme color.

[1]: https://docs.asciidoctor.org/asciidoctor/latest/html-backend/source-highlighting-stylesheets/#pygments

--- a/config.toml
+++ b/config.toml
@@ -2,8 +2,11 @@ baseURL = "https://rfdonnelly.github.io/"
 languageCode = "en-us"
 title = "Rob Donnelly"
 theme = "temple"
+
+# Markdown syntax highlighting
 pygmentsCodefences = true
 pygmentsUseClasses = true
+pygmentsStyle = "friendly"
 
 [params]
   dateformatpretty = "2006-01-02"
@@ -18,6 +21,11 @@ pygmentsUseClasses = true
     extensions = ["asciidoctor-html5s", "asciidoctor-kroki"]
     preserveTOC = true
     sectionNumbers = true
+    [markup.asciidocExt.attributes]
+      # Asciidoc syntax highlighting
+      source-highlighter = "pygments"
+      pygments-css = "style"
+      pygments-style = "friendly"
 
 [security]
   enableInlineShortcodes = false
