feat: use icon fonts
Doesn't really work though.  Need to embed font-awesome?

--- a/config.toml
+++ b/config.toml
@@ -27,6 +27,7 @@ pygmentsStyle = "friendly"
       source-highlighter = "pygments"
       pygments-css = "style"
       pygments-style = "friendly"
+      icons = "font"
 
 [security]
   enableInlineShortcodes = false
