fix: double numbering of toc entries when sectnums enabled
The html5s backend uses an ordered listed for the TOC.  This combined
with section numbers creates double numbering in TOC entries.

Fix by overriding the list style for ol TOC tags.

--- a/config.toml
+++ b/config.toml
@@ -24,6 +24,7 @@ pygmentsStyle = "friendly"
     sectionNumbers = true
     [markup.asciidocExt.attributes]
       # Asciidoc syntax highlighting
+      toc = true
       source-highlighter = "pygments"
       pygments-css = "style"
       pygments-style = "friendly"
